# piggyback-learning-2

./: .gitignore  404.html  Ghost in the Museum ｜ Full Episode ｜ Spidey and His Amazing Friends ｜ @disneyjr @MarvelHQ [yX4C7wuZevw].f616.mp4.part-Frag39.part  README.md  admin_routes.py  api.html  build.sh  db.py  docker-compose.yml  gemini_server.ts  index.html  main.py  markdown-page.html  myscript.sh  package-lock.json  readme.md  requirements.txt  sitemap.xml  speech_log.json  speech_log.txt  sqlite.db  video_quiz_routes.py
ai/: tests.py  urls.py  views.py
app/: __init__.py  settings.py  web.py
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  env.example
backend/.cargo/: config.toml
backend/config/: development.yaml  test.yaml
backend/migration/src/: lib.rs  m20260329_190420_parents.rs  m20260329_201606_kids.rs  m20260329_211415_tags.rs  m20260329_212214_kid_tags.rs  m20260329_220403_videos.rs  m20260330_034450_video_tags.rs  m20260330_052503_frames.rs  m20260330_053736_frames.rs  m20260330_055308_add_index_in_frame.rs  m20260330_164331_add_index_in_kid_tags.rs  m20260330_165514_add_index_in_video_tags.rs  m20260330_234807_segments.rs  m20260331_001127_questions.rs  m20260331_002454_add_index_in_segment.rs  m20260331_144037_video_assignments.rs  m20260331_145632_add_index_in_video_assignment.rs  m20260401_200359_add_analysis_cols_in_video_assignments.rs  m20260421_000001_add_followup_fields_to_questions.rs
backend/src/: app.rs  lib.rs  openapi.rs
backend/src/controllers/: answers.rs  auth.rs  frames.rs  kids.rs  mod.rs  openai.rs  parents.rs  questions.rs  tags.rs  videos.rs  ws.rs
backend/src/models/: frames.rs  generated_questions.rs  kid_tags.rs  kids.rs  mod.rs  parents.rs  questions.rs  segments.rs  video_assignments.rs  video_tags.rs  videos.rs
backend/src/models/_entities/: frames.rs  generated_questions.rs  kid_tags.rs  kids.rs  mod.rs  parents.rs  prelude.rs  questions.rs  segments.rs  tags.rs  video_assignments.rs  video_tags.rs  videos.rs
backend/src/utils/: download.rs  mod.rs  openai.rs  structs.rs
backend/src/utils/voice/: audio_processor.rs  matching.rs  mod.rs  mood.rs  state.rs  stt.rs
backend/tests/models/: hook.rs  kids.rs  mod.rs
backend/tests/requests/: answers.rs  auth.rs  kids.rs  mod.rs  parents.rs  questions.rs  tags.rs  videos.rs
backend/tests/utils/: audio_processor.rs  matching.rs  mod.rs  mood.rs  openai.rs  video_assignments.rs
core/: asgi.py  settings.py  swagger.py  urls.py
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.js
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml  config.toml.example
desktop/src-tauri/src/: lib.rs
desktop/src-tauri/src/commands/: voice.rs
desktop/src-tauri/src/db/: init.rs  schema.rs
desktop/src-tauri/src/handlers/: answers.rs  auth.rs  frames.rs  kids.rs  mod.rs  parents.rs  questions.rs  tags.rs  videos.rs
desktop/src-tauri/src/utils/: app_handle.rs  crypto.rs  download.rs  gaze.rs  matching.rs  mod.rs  mood.rs  mpv.rs  openai.rs  text.rs  yt_server.rs
desktop/src-tauri/src/utils/voice/: audio_processor.rs  capture.rs  command_resolver.rs  dispatcher.rs  enrollment.rs  intent_classifier.rs  mod.rs  onboarding.rs  session.rs  speaker.rs  state.rs  stt.rs  vad.rs  wake_word.rs
desktop/src-tauri/src/voice/: audio_processor.rs  capture.rs  command_resolver.rs  dispatcher.rs  enrollment.rs  intent.rs  intent_classifier.rs  mel.rs  mod.rs  moonshine.rs  onboarding.rs  session.rs  speaker.rs  state.rs  tts.rs  vad.rs  wake_word.rs
docs/: intro.html
documentation/: docusaurus.config.js
frontend/: .env.local  Dockerfile.dev  README.md  env.example  next.config.mjs  package-lock.json  package.json
models/: __init__.py  role.py  user.py  user_profile.py  video.py  watch_history.py
pages/: urls.py  views.py
quizgen/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
redocusaurus/: swagger-doc.yaml
review/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
static/: kids_videos.json
templates/: admin.html  avatar_sample.html  children.html  expert_preview.html  home.html  kids.html  video_quiz.html
(+677 files in other folders)
