[workspace]

[package]
name = "backend"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "backend-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8", features = ["ws"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
include_dir = { version = "0.7" }
dotenv = "0.15.0"
base64 = "0.22.1"
async-openai = { version = "0.34.0", features = ["byot", "chat-completion"] }
once_cell = "1.21.4"
vosk = "0.3.1"
hound = "3.5.1"
strsim = "0.11.1"
thesaurus = "0.5.2"
futures = "0.3.32"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }

[[bin]]
name = "backend-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
